--- a/crds/JqController.crd.yaml
+++ b/crds/JqController.crd.yaml
@@ -1,12 +1,12 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: jqcontrollers.xxx.jq
+  name: jqcontrollers.jq-ctr.io
 spec:
   scope: Namespaced
   conversion:
     strategy: None
-  group: xxx.jq
+  group: jq-ctr.io
   names:
     kind: JqController
     listKind: JqControllerList
