feat: Allow for the use of custom APPLY_FUNCTION

--- a/jq-controller-bundle.yaml
+++ b/jq-controller-bundle.yaml
@@ -127,12 +127,13 @@ data:
     : ${FOOTER_DEF_FILE:="/in/footer.jq"}
     : ${WATCH_EVENTS:='ADDED, MODIFIED'}
     : ${WATCH_FUNCTION:=kubectlGetWatch}
+    : ${APPLY_FUNCTION:=filterApplyLoop}
 
     msg() { echo "$@"; }
     dbg() { [ "$DEBUG" ] && msg ">DEBUG> $@"; }
     main() {
       ${WATCH_FUNCTION} \
-      | filterApplyLoop
+      | ${APPLY_FUNCTION}
     }
 
     kubectlGetWatch() {
