chore: update bundle

--- a/jq-controller-bundle.yaml
+++ b/jq-controller-bundle.yaml
@@ -143,11 +143,11 @@ data:
       [[ $ALL_NS ]] && allNs="-A"
       kubectl get --watch -o json --output-watch-events \
         $allNs ${WATCH_TARGET} \
-        | jq --unbuffered -c --arg watch_events "$WATCH_EVENTS" \
+        | jq --unbuffered -c --arg watch_events "${WATCH_EVENTS// /}" \
           '
             .type as $type
             | select(
-                ( $watch_events | split(", ") | index($type) ) != null
+                ( $watch_events | split(",") | index($type) ) != null
               )
             | .object
           '
@@ -281,6 +281,7 @@ data:
     }
 
     world() {
+      ## TODO: Replace with sth generic like ACTION_ONCE ???
       if [[ ${KUBECTL_MAIN_ACTION} == "create" ]]
       then
         main
